--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
 <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Kelvin Weather!</h1>
+<h1>Kelvin Weather!</h1>
+<div>
+  <h1>
+    kelvin
+  </h1>
+</div>
+<div>
+  <h1>
+    celsius
+  </h1>
+</div>
+<div>
+  <h1>
+    Fahrenheit
+  </h1>
+</div>
 
-  
     <script src='js/app.js'></script>
   </body>
 </html>
