--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
   <h1>
     kelvin
   </h1>
+  <input type="text" name="Kelvin" class="fill">
 </div>
 <div>
   <h1>
     celsius
   </h1>
+  <input type="text" name="Celsius" class="fill">
 </div>
 <div>
   <h1>
     Fahrenheit
   </h1>
+  <input type="text" name="Fahrenheit" class="fill">
 </div>
 
     <script src='js/app.js'></script>
